; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_duplicator-monitor-capture.c_duplicator_capture_destroy.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_duplicator-monitor-capture.c_duplicator_capture_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.duplicator_capture = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @duplicator_capture_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @duplicator_capture_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.duplicator_capture*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.duplicator_capture*
  store %struct.duplicator_capture* %5, %struct.duplicator_capture** %3, align 8
  %6 = call i32 (...) @obs_enter_graphics()
  %7 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %8 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @gs_duplicator_destroy(i32 %9)
  %11 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %12 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %11, i32 0, i32 0
  %13 = call i32 @cursor_data_free(i32* %12)
  %14 = call i32 (...) @obs_leave_graphics()
  %15 = load %struct.duplicator_capture*, %struct.duplicator_capture** %3, align 8
  %16 = call i32 @bfree(%struct.duplicator_capture* %15)
  ret void
}

declare dso_local i32 @obs_enter_graphics(...) #1

declare dso_local i32 @gs_duplicator_destroy(i32) #1

declare dso_local i32 @cursor_data_free(i32*) #1

declare dso_local i32 @obs_leave_graphics(...) #1

declare dso_local i32 @bfree(%struct.duplicator_capture*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
